feat: get mail templates
